--- a/rest_prod/templates/modificar.html
+++ b/rest_prod/templates/modificar.html
@@ -14,7 +14,7 @@
            
             <div class="container bg-light rounded p-0 my-2 w-50">
                 <div class="titulo d-flex justify-content-center bg-primary rounded">
-                    <h1 class="text-white">INGRESE TITULO DE EJEMPLO</h1>
+                    <h1 class="text-white">API de modificar productos</h1>
                 </div>
                 <div class="formulario d-flex flex-column justify-content-center p-2 gap-3">
                     {% csrf_token %}
