--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -33,10 +33,10 @@
 <div class="container-menu">
 	<div class="cont-menu">
 		<nav>
-            <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
+            <a href="{% url 'logincustom' %}"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
             <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
             <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
-            <a href="/listar-producto"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
+            <a href="{% url 'lista_prod' %}"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
             <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
             <i id="finalmenu" class="fa-solid fa-globe"></i>
 		</nav>
@@ -76,7 +76,7 @@
                                                 <td>Marca {{prod.marca}}</td>
                                         </tr>
                                         
-                                        <a class="compra-aqui" href="#">Compra aquí!</a>
+                                        <a class="compra-aqui" href="{% url 'lista_productosID' prod.idpro %}">Compra aquí!</a>
                                     {% endfor %}
                                     
                                 </div>
