--- a/rest_prod/templates/home.html
+++ b/rest_prod/templates/home.html
@@ -15,7 +15,7 @@
 <body   >
     <div class="container d-flex flex-column justify-content-center bg-light my-2 rounded p-0 w-50">
       <div class="titulo d-flex justify-content-center bg-primary rounded">
-        <h1 class="text-white">INGRESE TITULO DE EJEMPLO</h1>
+        <h1 class="text-white">API de productos</h1>
       </div>
         <table class="table">
             <thead>
