--- a/rest_prod/templates/home.html
+++ b/rest_prod/templates/home.html
@@ -103,7 +103,7 @@
               </div>
             </div>
         </div>
-          <a class="btn btn-primary" href="{% url 'lista_prod' %}" role="button">Volver</a>
+          <a class="btn btn-primary" href="{% url 'Inicio' %}" role="button">Volver</a>
         </div>
         <div id="error" class="alert alert-success" role="alert">
           {{ mensaje }}
