--- a/productos/static/productos/css/estilo-index.css
+++ b/productos/static/productos/css/estilo-index.css
@@ -864,6 +864,8 @@ a {
         width: 100%;
     }
     #contenedor5img {
+        position: relative;
+        left: 20%;
         width: 100%;
     }
     #caja-ofrecemos {
@@ -1496,7 +1498,7 @@ a {
     }
     #caja-ofrecemos {
         top: -500px;
-        left: -33%;
+        left: -10%;
     }
     .cont-menu nav i {
         font-size: 25px;
