--- a/knoxapp/templates/login.html
+++ b/knoxapp/templates/login.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css" integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'productos/css/estilo-login.css'%}">
+    <link rel="stylesheet" href="{% static 'productos/css/estiloknox.css'%}">
     <title>Document</title>
 </head>
 <body>
@@ -34,9 +34,9 @@
         </div>
         <div class="form-group">
             <div class="d-flex justify-content-center text-center p-2 gap-3">
-                <button type="submit" class="btn btn-primary"><i class="bi bi-box-arrow-in-right"> Login</i></button>
-                <a class="btn btn-primary" href="{% provider_login_url 'google' %}" role="button"><i class="bi bi-google"> Google</i></a>
-                <a class="btn btn-primary" href="{% url 'logoutcustom' %}" role="button"><i class="bi bi-box-arrow-left"> LogOut</i></a>
+                <button type="submit" class="btn btn-primary" id="botonlogin"><i class="bi bi-box-arrow-in-right"> Login</i></button>
+                <a class="btn btn-primary" id="botongoogle" href="{% provider_login_url 'google' %}" role="button"><i class="bi bi-google"> Google</i></a>
+                <a class="btn btn-primary" id="botonlogout" href="{% url 'logoutcustom' %}" role="button"><i class="bi bi-box-arrow-left"> LogOut</i></a>
             </div>
         </div>
         <div class="form-group">
