--- a/productos/templates/productos/index.html
+++ b/productos/templates/productos/index.html
@@ -273,7 +273,7 @@
             <img src="{% static 'productos/imagenes/msi.png'%}" alt="">
         </div>
     </section>
-    <h1>Entregamos</h1>
+    <h1 class="entregamos">Entregamos</h1>
     <section id="contenedor5">
         <img id="contenedor5img" src="{%static 'productos/imagenes/ofrecemos.svg'%}" alt="">
         <div id="caja-ofrecemos">
