--- a/productos/static/productos/css/estilo-index2.css
+++ b/productos/static/productos/css/estilo-index2.css
@@ -5,15 +5,12 @@
 }
 
 body {
-    background-color: #ffffff;
-    background-image: url(../image/bg4.jpg);
-    background-position: center center;
-    background-attachment: fixed;
+    background: #E5E5E5;
     background-repeat: no-repeat;
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../image/bg4.jpg);
     background-size: cover;
-    /* ATRIBUTOS BACKGROUND DE BODY */
-    display: flex;
-    flex-direction: column;
+    background-attachment: fixed;
+    background-color: #593a81;
 }
 
 h1,
@@ -23,6 +20,7 @@ h4,
 h5,
 h6 {
     color: #ffffff;
+    align-items: center;
 }
 
 header {
@@ -424,9 +422,6 @@ h1 {
 }
 
 .carousel-item {
-    background-color: #10095875;
-    border-radius: 100px;
-    border: 1mm ridge;
     min-height: 280px;
     padding: 0px;
     position: relative;
