--- a/productos/static/productos/css/estilo-index.css
+++ b/productos/static/productos/css/estilo-index.css
@@ -6,17 +6,14 @@
 }
 
 body {
-    background-color: #ffffff;
-    background-image: url(../imagenes/bg4.jpg);
-    background-position: center center;
-    background-attachment: fixed;
+    background: #E5E5E5;
     background-repeat: no-repeat;
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../image/bg4.jpg);
     background-size: cover;
-    /* ATRIBUTOS BACKGROUND DE BODY */
-    display: flex;
-    flex-direction: column;
+    background-attachment: fixed;
+    background-color: #593a81;
 }
-    
+
 h1,
 h2,
 h3,
@@ -24,6 +21,7 @@ h4,
 h5,
 h6 {
     color: #ffffff;
+    text-align: center;
 }
 
 header {
@@ -335,9 +333,6 @@ h1 {
 }
 
 .carousel-item {
-    background-color: #10095875;
-    border-radius: 100px;
-    border: 1mm ridge;
     min-height: 280px;
     padding: 0px;
     position: relative;
@@ -1498,7 +1493,7 @@ a {
     }
     #caja-ofrecemos {
         top: -500px;
-        left: -10%;
+        right: -15%;
     }
     .cont-menu nav i {
         font-size: 25px;
