--- a/static/productos/css/estilo-index.css
+++ b/static/productos/css/estilo-index.css
@@ -6,15 +6,12 @@
 }
 
 body {
-    background-color: #ffffff;
-    background-image: url(../imagenes/bg4.jpg);
-    background-position: center center;
-    background-attachment: fixed;
+    background: #E5E5E5;
     background-repeat: no-repeat;
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../image/bg4.jpg);
     background-size: cover;
-    /* ATRIBUTOS BACKGROUND DE BODY */
-    display: flex;
-    flex-direction: column;
+    background-attachment: fixed;
+    background-color: #593a81;
 }
 
 h1,
@@ -24,6 +21,7 @@ h4,
 h5,
 h6 {
     color: #ffffff;
+    text-align: center;
 }
 
 header {
@@ -335,9 +333,6 @@ h1 {
 }
 
 .carousel-item {
-    background-color: #10095875;
-    border-radius: 100px;
-    border: 1mm ridge;
     min-height: 280px;
     padding: 0px;
     position: relative;
@@ -864,6 +859,8 @@ a {
         width: 100%;
     }
     #contenedor5img {
+        position: relative;
+        left: 20%;
         width: 100%;
     }
     #caja-ofrecemos {
@@ -889,419 +886,7 @@ a {
     }
 }
 
-@media screen and (min-width: 480px) {
-    .capa {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: -1;
-        top: 0;
-        left: 0;
-    }
-    /*Estilos para el encabezado*/
-    .header {
-        width: 100%;
-        height: 100px;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-    .container {
-        width: 90%;
-        max-width: 1200px;
-        margin: auto;
-    }
-    .container .btn-menu,
-    .logo {
-        float: left;
-        line-height: 100px;
-    }
-    .container .btn-menu label {
-        color: #fff;
-        font-size: 25px;
-        cursor: pointer;
-    }
-    .logo h1 {
-        color: #fff;
-        font-weight: 400;
-        font-size: 22px;
-        margin-left: 10px;
-    }
-    .container .menu {
-        float: right;
-        line-height: 100px;
-    }
-    .container .menu a {
-        display: inline-block;
-        padding: 15px;
-        line-height: normal;
-        text-decoration: none;
-        color: #fff;
-        transition: all 0.3s ease;
-        border-bottom: 2px solid transparent;
-        font-size: 15px;
-        margin-right: 5px;
-    }
-    .container .menu a:hover {
-        border-bottom: 2px solid #c7c7c7;
-        padding-bottom: 5px;
-    }
-    /*Fin de Estilos para el encabezado*/
-    /*Menù lateral*/
-    #btn-menu {
-        display: none;
-    }
-    .container-menu {
-        position: absolute;
-        background: rgba(0, 0, 0, 0.5);
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        transition: all 500ms ease;
-        opacity: 0;
-        visibility: hidden;
-    }
-    #btn-menu:checked~.container-menu {
-        opacity: 1;
-        visibility: visible;
-    }
-    .cont-menu {
-        width: 100%;
-        max-width: 250px;
-        background: #1c1c1c;
-        z-index: 100;
-        height: 100vh;
-        position: fixed;
-        transition: all 500ms ease;
-        transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        -moz-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-        -o-transform: translateX(-100%);
-        -webkit-transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
-    }
-    #btn-menu:checked~.container-menu .cont-menu {
-        transform: translateX(0%);
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-    }
-    .cont-menu nav {
-        transform: translateY(15%);
-        -webkit-transform: translateY(15%);
-        -moz-transform: translateY(15%);
-        -ms-transform: translateY(15%);
-        -o-transform: translateY(15%);
-    }
-    .cont-menu nav a {
-        display: block;
-        text-decoration: none;
-        padding: 20px;
-        color: #c7c7c7;
-        border-left: 5px solid transparent;
-        transition: all 400ms ease;
-        -webkit-transition: all 400ms ease;
-        -moz-transition: all 400ms ease;
-        -ms-transition: all 400ms ease;
-        -o-transition: all 400ms ease;
-    }
-    .cont-menu nav a:hover {
-        transform: scale(1.15);
-        -webkit-transform: scale(1.15);
-        -moz-transform: scale(1.15);
-        -ms-transform: scale(1.15);
-        -o-transform: scale(1.15);
-    }
-    .cont-menu label {
-        position: absolute;
-        right: 5px;
-        top: 10px;
-        color: #fff;
-        cursor: pointer;
-        font-size: 18px;
-    }
-}
-
-
-/* DISEÑO TABLET */
-
-@media screen and (min-width: 768px) {
-    .capa {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: -1;
-        top: 0;
-        left: 0;
-    }
-    /*Estilos para el encabezado*/
-    .header {
-        width: 100%;
-        height: 100px;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-    .container {
-        width: 90%;
-        max-width: 1200px;
-        margin: auto;
-    }
-    .container .btn-menu,
-    .logo {
-        float: left;
-        line-height: 100px;
-    }
-    .container .btn-menu label {
-        color: #fff;
-        font-size: 25px;
-        cursor: pointer;
-    }
-    .logo h1 {
-        color: #fff;
-        font-weight: 400;
-        font-size: 22px;
-        margin-left: 10px;
-    }
-    .container .menu {
-        float: right;
-        line-height: 100px;
-    }
-    .container .menu a {
-        display: inline-block;
-        padding: 15px;
-        line-height: normal;
-        text-decoration: none;
-        color: #fff;
-        transition: all 0.3s ease;
-        border-bottom: 2px solid transparent;
-        font-size: 15px;
-        margin-right: 5px;
-        -webkit-transition: all 0.3s ease;
-        -moz-transition: all 0.3s ease;
-        -ms-transition: all 0.3s ease;
-        -o-transition: all 0.3s ease;
-    }
-    .container .menu a:hover {
-        border-bottom: 2px solid #c7c7c7;
-        padding-bottom: 5px;
-    }
-    /*Fin de Estilos para el encabezado*/
-    /*Menù lateral*/
-    #btn-menu {
-        display: none;
-    }
-    .container-menu {
-        position: absolute;
-        background: rgba(0, 0, 0, 0.5);
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        transition: all 500ms ease;
-        opacity: 0;
-        visibility: hidden;
-        -webkit-transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
-    }
-    #btn-menu:checked~.container-menu {
-        opacity: 1;
-        visibility: visible;
-    }
-    .cont-menu {
-        width: 100%;
-        max-width: 250px;
-        background: #1c1c1c;
-        z-index: 100;
-        height: 100vh;
-        position: fixed;
-        transition: all 500ms ease;
-        transform: translateX(-100%);
-        -webkit-transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
-        -webkit-transform: translateX(-100%);
-        -moz-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-        -o-transform: translateX(-100%);
-    }
-    #btn-menu:checked~.container-menu .cont-menu {
-        transform: translateX(0%);
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-    }
-    .cont-menu nav {
-        transform: translateY(15%);
-        -webkit-transform: translateY(15%);
-        -moz-transform: translateY(15%);
-        -ms-transform: translateY(15%);
-        -o-transform: translateY(15%);
-    }
-    .cont-menu nav a {
-        display: block;
-        text-decoration: none;
-        padding: 20px;
-        color: #c7c7c7;
-        transition: all 400ms ease;
-        -webkit-transition: all 400ms ease;
-        -moz-transition: all 400ms ease;
-        -ms-transition: all 400ms ease;
-        -o-transition: all 400ms ease;
-    }
-    .cont-menu label {
-        position: absolute;
-        right: 5px;
-        top: 10px;
-        color: #fff;
-        cursor: pointer;
-        font-size: 18px;
-    }
-    #menu {
-        width: 90%;
-        /* ATRIBUTOS BORDER DE LA CAJA NAV */
-    }
-    #titulo li.titulotxt {
-        font-size: 30px;
-        margin: 120px 0px;
-    }
-    .servicios {
-        font-size: 15px;
-    }
-    #productos h1 {
-        font-size: 28px;
-    }
-    #articulo1 {
-        height: 400px;
-    }
-    #articulo2 {
-        height: 400px;
-    }
-    #articulo3 {
-        height: 400px;
-    }
-    #articulo4 {
-        height: 400px;
-    }
-    #articulo5 {
-        height: 400px;
-    }
-    #articulo1 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo2 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo3 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo4 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo5 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    div.carousel-caption {
-        bottom: 0.25rem;
-    }
-    .contenedortext img {
-        max-width: 600px;
-    }
-    #caja-ofrecemos {
-        top: -370px;
-        left: 40%;
-    }
-}
-
-
-/* DISEÑO LAPTOP CHICA */
-
-@media screen and (min-width: 769px) {
-    #menu {
-        width: 90%;
-        /* ATRIBUTOS BORDER DE LA CAJA NAV */
-    }
-    #titulo li.titulotxt {
-        font-size: 30px;
-        margin: 120px 0px;
-    }
-    .servicios {
-        font-size: 25px;
-    }
-    #productos h1 {
-        font-size: 28px;
-    }
-    #articulo1 {
-        height: 400px;
-    }
-    #articulo2 {
-        height: 400px;
-    }
-    #articulo3 {
-        height: 400px;
-    }
-    #articulo4 {
-        height: 400px;
-    }
-    #articulo5 {
-        height: 400px;
-    }
-    #articulo1 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo2 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo3 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo4 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    #articulo5 img {
-        margin: 15px 121px;
-        width: 50%;
-        height: 50%;
-    }
-    div.carousel-caption {
-        bottom: 0.25rem;
-    }
-    #caja-ofrecemos {
-        top: -370px;
-        left: 40%;
-    }
-}
-
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
     .container {
         margin: auto;
     }
@@ -1496,7 +1081,7 @@ a {
     }
     #caja-ofrecemos {
         top: -500px;
-        left: -33%;
+        right: -15%;
     }
     .cont-menu nav i {
         font-size: 25px;
