--- a/productos/templates/productos/contacto.html
+++ b/productos/templates/productos/contacto.html
@@ -38,7 +38,7 @@
 	</div>
 </div>
     <span>
-        <i class="fa-solid fa-globe"></i>
+        <i id="globo" class="fa-solid fa-globe"></i>
     </span>
     <main>
         <form action="https://formspree.io/f/xvolqvdb" class="formulario" id="formulario" method="POST">
@@ -72,8 +72,7 @@
                 </div>
                 <p class="formulario__input-error">El telefono solo puede contener numeros y el maximo son 9 dígitos.</p>
             </div>
-
-            <label for="mensaje">Mensaje:</label>
+            <div></div>
             <textarea name="mensaje" id="mensaje" cols="30" rows="15" placeholder="Ingrese mensaje aqui"></textarea>
 
             <!-- Grupo: Terminos y Condiciones -->
